Move complaints to operation from medical

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <div class="Download pageOverlay">
                 <div id="MainMenuContent" >
 					<h3>Download Spreadsheet file</h3>
-                    <button type="button" class="divbutton" onclick="">Patient List</button>
-                    <button type="button" class="divbutton" onclick="All Data">All data</button>
+                    <button type="button" class="divbutton" onclick="downloadPatients()">Patient List</button>
+                    <button type="button" class="divbutton" onclick="downloadAll()">All data</button>
                 </div>
             </div>
             <!-- body: PatientList -->
