First of 2 downloads working

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div id="MainMenuContent" >
                     <button type="button" class="divbutton" onclick="showPage( 'PatientList' )">Patient List</button>
                     <button type="button" class="divbutton" onclick="showPage( 'SettingMenu' )">Settings</button>
-                    <button type="button" class="divbutton" onclick="showPage( 'Download' )">Help</button>
+                    <button type="button" class="divbutton" onclick="showPage( 'Download' )">Download</button>
                 </div>
             </div>
             <!-- body: Download -->
