--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Medical Mission Database</title>
         <link rel="shortcut icon" type="image/png" href="images/missiondb64.png"/>
         <link rel="stylesheet" href="style/base.css">
