Design docs and Uniqie Surgeon names and calclist all work now

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
                     <button type="button" class="divbutton" onclick="showPage( 'PatientList' )">Patient List</button>
                     <button type="button" class="divbutton" onclick="showPage( 'SettingMenu' )">Settings</button>
                     <button type="button" class="divbutton" onclick="showPage( 'Download' )">Download</button>
+                    <button type="button" class="divbutton" onclick="createScheduleIndex()">DesignIndex</button>
+                    <button type="button" class="divbutton" onclick="testScheduleIndex()">CreateIndex</button>
                 </div>
             </div>
             <!-- body: Download -->
@@ -154,7 +156,7 @@
             </div>
             <!-- body: NoteList -->
             <div class="NoteList pageOverlay">
-                <div id="NoteListContent" ></div>
+                <div id="NoteListContent"></div>
             </div>
             <!-- body: NoteNew (quick note) -->
             <div class="NoteNew pageOverlay">
