Simplify indexes using one per sign doc and making a list of design docs

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                     <button type="button" class="divbutton" onclick="showPage( 'PatientList' )">Patient List</button>
                     <button type="button" class="divbutton" onclick="showPage( 'SettingMenu' )">Settings</button>
                     <button type="button" class="divbutton" onclick="showPage( 'Download' )">Download</button>
-                    <button type="button" class="divbutton" onclick="createScheduleIndex()">DesignIndex</button>
+                    <button type="button" class="divbutton" onclick="createIndexes()">DesignIndex</button>
                     <button type="button" class="divbutton" onclick="testScheduleIndex()">CreateIndex</button>
                 </div>
             </div>
             <!-- body: Download -->
             <div class="Download pageOverlay">
                 <div id="MainMenuContent" >
-					<h3>Download Spreadsheet file</h3>
+                    <h3>Download Spreadsheet file</h3>
                     <button type="button" class="divbutton" onclick="downloadPatients()">Patient List</button>
                     <button type="button" class="divbutton" onclick="downloadAll()">All data</button>
                 </div>
